# candle-wasm-example

./: Cargo.toml
