[package]
name = "candle-wasm-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
tokenizers = { version = "0.19.1", default-features = false, features = ["unstable_wasm"] }
byteorder = "1.5.0"
serde = "1.0.204"
serde_json = "1.0.120"
safetensors = "0.4.3"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.64"
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.0"
